--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -5,8 +5,13 @@ dependencyManagement {
         dependency 'info.picocli:picocli:4.5.0'
         dependency 'org.fusesource.jansi:jansi:1.11'
         dependency 'de.codeshelf.consoleui:consoleui:0.0.13'
+        dependency 'org.apache.commons:commons-lang3:3.0.1'
+        dependency "org.immutables:value:2.8.8"
+        dependency "org.immutables:value-annotations:2.8.8"
 
         dependency 'com.google.guava:guava:29.0-jre'
+
+        dependency 'org.assertj:assertj-core:3.16.1'
         dependency 'org.junit.jupiter:junit-jupiter:5.7.0'
         dependency 'junit:junit:4.13'
 
