--- a/build.gradle
+++ b/build.gradle
@@ -91,8 +91,13 @@ dependencies {
   implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8'
   implementation 'info.picocli:picocli'
   implementation 'de.codeshelf.consoleui:consoleui'
+  implementation 'org.apache.commons:commons-lang3'
+  implementation "org.immutables:value-annotations"
+
+  annotationProcessor "org.immutables:value"
 
   // Use JUnit test framework
+  testImplementation 'org.assertj:assertj-core'
   testImplementation 'org.junit.jupiter:junit-jupiter'
   testImplementation 'junit:junit'
 }
