--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ sonarqube {
     property "sonar.projectKey", "ConsenSys_ethclient-launcher"
     property "sonar.organization", "consensys"
     property "sonar.host.url", "https://sonarcloud.io"
+    property 'sonar.exclusions', "*Test"
   }
 }
 
@@ -49,6 +50,8 @@ jacocoTestReport {
     xml.enabled true
   }
 }
+
+
 test.finalizedBy jacocoTestReport
 
 spotless {
