add forced mechanism
Signed-off-by: Karim TAAM <karim.t2am@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -161,7 +161,7 @@ def bintrayPackage = bintray.pkg {
   repo = 'consensys'
   name = 'quorum-mainnet-launcher'
   userOrg = 'consensys'
-  desc = "Ethereum client launcher"
+  desc = "Quorum mainnet client configuration generator"
   licenses = ['Apache-2.0']
   websiteUrl = 'https://github.com/ConsenSys/quorum-mainnet-launcher'
   issueTrackerUrl = 'https://github.com/ConsenSys/quorum-mainnet-launcher/issues'
