--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ plugins {
 }
 
 group = 'net.consensys.services'
-version = '1.0.1-SNAPSHOT'
+version = '1.0.1'
 sourceCompatibility = '11'
 
 apply plugin: 'com.diffplug.gradle.spotless'
