--- a/.github/workflows/quorum-mainnet-launcher-ci.yml
+++ b/.github/workflows/quorum-mainnet-launcher-ci.yml
@@ -63,7 +63,7 @@ jobs:
           env:
             CLOUDSMITH_USER: ${{ secrets.CLOUDSMITH_USER }}
             CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
-          run: ./gradlew assemble cloudsmithUpload
+          run: ./gradlew assemble generatePomFileForMavenPublicationPublication cloudsmithUpload
 
   sonar:
     name: Sonar
