--- a/.github/workflows/quorum-mainnet-launcher-ci.yml
+++ b/.github/workflows/quorum-mainnet-launcher-ci.yml
@@ -42,6 +42,7 @@ jobs:
         run: ./gradlew test
 
   publish-cloudsmith:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     name: Publish cloudsmith
     runs-on: ubuntu-latest
     steps:
